--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>Merchant Service</name>
     <description>Merchant Service</description>
     <properties>
-        <java.version>21</java.version>
+        <java.version>17</java.version>
         <assertj-core.version>3.25.1</assertj-core.version>
     </properties>
     <dependencies>
@@ -30,7 +30,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -47,9 +46,16 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <!-- Test Dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
